<resources>

    <!--App Name-->
    <string name="app_name">Select Algorithm</string>

    <!--Main Activity-->
    <string name="string_main_input_add_hint">Enter a custom number</string>
    <string name="string_main_input_find_hint">Find this index</string>
    <string name="string_main_button_add">ADD</string>
    <string name="string_main_button_find">FIND</string>
    <string name="string_main_list_empty_msg">Seems like you have not added any data to your list yet</string>
    <string name="string_main_found_empty_msg">An empty list can not be sorted</string>
    <string name="string_main_found_msg">Now you can find your custom index of array by clicking on <font face="@font/open_sans_bold" fgcolor="#00C853"><b>FIND</b></font> button</string>
    <string name="string_main_found_msg_error_greater"><font fgcolor="#FF5722">Your entered index is greater than the array size. Choose a less one and click on <font face="@font/open_sans_bold" fgcolor="#00C853"><b>FIND</b></font> button</font></string>
    <string name="string_main_found_msg_error_less"><font fgcolor="#FF5722">Your entered index is less than the first array index. Choose a greater one and click on <font face="@font/open_sans_bold" fgcolor="#00C853"><b>FIND</b></font> button</font></string>
    <string name="string_main_list_title">Your List</string>
    <string name="string_main_found_title">Found Number</string>

</resources>