<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="never"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_main_layout_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_toStartOf="@+id/button_main_add"
                android:hint="@string/string_main_input_add_hint"
                android:textColorHint="@color/colorInputText"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="7dp"
                app:boxCornerRadiusBottomStart="7dp"
                app:boxCornerRadiusTopEnd="7dp"
                app:boxCornerRadiusTopStart="7dp"
                app:boxStrokeColor="@color/colorInputBoxStroke"
                app:hintEnabled="true"
                app:hintTextColor="@color/colorInputText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_main_edit_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_regular"
                    android:imeOptions="actionDone"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:textColor="@color/colorInputText"
                    android:textDirection="ltr"
                    android:textSize="13sp"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_main_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/colorButtonAdd"
                android:fontFamily="@font/open_sans_bold"
                android:onClick="addOnClick"
                android:text="@string/string_main_button_add"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_main_layout_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_toStartOf="@+id/button_main_find"
                android:hint="@string/string_main_input_find_hint"
                android:textColorHint="@color/colorInputText"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="7dp"
                app:boxCornerRadiusBottomStart="7dp"
                app:boxCornerRadiusTopEnd="7dp"
                app:boxCornerRadiusTopStart="7dp"
                app:boxStrokeColor="@color/colorInputBoxStroke"
                app:hintEnabled="true"
                app:hintTextColor="@color/colorInputText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_main_edit_find"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_regular"
                    android:imeOptions="actionDone"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:textColor="@color/colorInputText"
                    android:textDirection="ltr"
                    android:textSize="13sp"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_main_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/colorButtonSort"
                android:fontFamily="@font/open_sans_bold"
                android:onClick="findOnClick"
                android:text="@string/string_main_button_find"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7.5dp"
                android:layout_weight="1"
                app:cardCornerRadius="7dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="center"
                        android:text="@string/string_main_list_title"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorTitleText"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_main_list_empty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/open_sans_regular"
                        android:gravity="start|center_horizontal|center_vertical"
                        android:justificationMode="inter_word"
                        android:lines="3"
                        android:maxLines="3"
                        android:text="@string/string_main_list_empty_msg"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorListText"
                        android:textSize="13sp"
                        android:textStyle="normal"
                        android:visibility="visible"
                        tools:targetApi="o" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:visibility="gone"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="7.5dp"
                android:layout_weight="1"
                app:cardCornerRadius="7dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="center"
                        android:text="@string/string_main_found_title"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorTitleText"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_main_found_empty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/open_sans_regular"
                        android:gravity="start|center_horizontal|center_vertical"
                        android:justificationMode="inter_word"
                        android:lines="3"
                        android:maxLines="3"
                        android:text="@string/string_main_found_empty_msg"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorListText"
                        android:textSize="13sp"
                        android:textStyle="normal"
                        android:visibility="visible"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/tv_main_found_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="center"
                        android:lines="3"
                        android:maxLines="1"
                        android:text="525"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>